Fixed image stretching on index cards

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -7,7 +7,7 @@
     width: 19%;
     min-width: 220px;
     max-width: 300px;
-    height: 340px;
+    height: 330px;
     display: inline-block;
     border: 0.5px solid #CCCCCC;
     box-shadow: none;
@@ -149,8 +149,12 @@
       transition: 1s all ease-in-out !important;
       overflow: hidden; }
       .cards .card .card-image img {
-        width: 280px;
-        transition: 2s all ease-in-out !important; }
+        max-width: 400px;
+        max-height: 220px; }
+      .cards .card .card-image .cover {
+        object-fit: cover;
+        width: 100%;
+        height: 100%; }
     .cards .card .location {
       margin-top: 3px;
       font-size: 1em;
@@ -166,7 +170,7 @@
   transition: all 1s ease-in-out !important; }
   .columns .column {
     background-color: white;
-    padding: 10px;
+    padding: 8px;
     transition: all 1s ease-in-out !important; }
 
 .navbar {
